--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -178,11 +178,13 @@ section .title::after{
 }
 .home .home-content .text-1{
     font-size: 27px;
+    color: white;
 }
 .home .home-content .text-2{
     font-size: 75px;
     font-weight: 600;
     margin-left: -3px;
+    color: white;
 }
 .home .home-content .text-3{
     font-size: 40px;
